--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -99,11 +99,19 @@ m.EffectsAxes1_0=[[YELLOW]]Schaedelspalter (Faehigkeit)
 m.EffectsAxes1_1=[[AQUA]]Verursacht Flaechenschaden
 m.EffectsAxes2_0=[[YELLOW]]Kritischer Schlag
 m.EffectsAxes2_1=[[AQUA]]doppelter Schaden
-m.EffectsAxes3_0=[[YELLOW]]Axtmeister (500 Skilllevel)
-m.EffectsAxes3_1=[[AQUA]]Modifiziert Schaden
-m.AbilLockAxes1=[[DARK_AQUA]]gesperrt bis 500+ Skilllevel(Axtmeister)
-m.AbilBonusAxes1_0=[[YELLOW]]Axtmeister
-m.AbilBonusAxes1_1=[[AQUA]]4 Bonus-Schaden
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[YELLOW]]Chance fuer kritische Treffer: [[GREEN]]{0}%
 m.AxesSkullLength=[[YELLOW]]Schaedelspalter Dauer: [[GREEN]]{0}s
 m.SkillSwords=Schwert (Swords)
