--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -100,7 +100,7 @@ m.EffectsAxes1_1=Deal AoE Damage
 m.EffectsAxes2_0=Critical Strikes
 m.EffectsAxes2_1=Double Damage
 m.EffectsAxes3_0=Axe Mastery
-m.EffectsAxes3_1=Modifies Damage
+m.EffectsAxes3_1=Adds bonus DMG
 m.EffectsAxes4_0=Impact
 m.EffectsAxes4_1=Strike with enough force to shatter armor
 m.EffectsAxes5_0=Greater Impact
