--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -99,11 +99,19 @@ m.EffectsAxes1_0=Cortador de cabecas (HABILIDAD)
 m.EffectsAxes1_1=Causa daños en arena
 m.EffectsAxes2_0=Golpes criticos
 m.EffectsAxes2_1=Doble de daño
-m.EffectsAxes3_0=Maestria de hacha
-m.EffectsAxes3_1=Modifica el daño
-m.AbilLockAxes1=BLOQUEADO HASTA TENER HABILIDAD +500 (MAESTRIA DE HACHA)
-m.AbilBonusAxes1_0=Maestria de hacha
-m.AbilBonusAxes1_1=4 de daño de bonus
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Posibilad de golpe critico: [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Longitud de Cortador de cabezas: [[YELLOW]]{0}s
 m.SkillSwords=ESPADAS
