--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -99,11 +99,19 @@ m.EffectsAxes1_0=Kallonhalkoja (TAITO)
 m.EffectsAxes1_1=Tee aluevahinkoa
 m.EffectsAxes2_0=Kriittiset Iskut
 m.EffectsAxes2_1=Tuplavahinko
-m.EffectsAxes3_0=Kirveiden Herra (500 TAITO)
-m.EffectsAxes3_1=Muokkaa vahinkoa
-m.AbilLockAxes1=LUKITTU KUNNES 500+ TAITO (KIRVEIDEN HERRA)
-m.AbilBonusAxes1_0=Kirveiden Herra
-m.AbilBonusAxes1_1=+4 Vahinko
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Todennäköisyys iskeä kriittisesti: [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Kallonhalkojan kesto: [[YELLOW]]{0}s
 m.SkillSwords=MIEKAT
