--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -99,11 +99,19 @@ m.EffectsAxes1_0=Berserk (UMIEJETNOSC)
 m.EffectsAxes1_1=Zadaje obrazenia wszystkiemu dookola.
 m.EffectsAxes2_0=Krytyczne uderzenie
 m.EffectsAxes2_1=Potrafisz trafic wroga tam gdzie boli, zadajac podwojne obrazenia.
-m.EffectsAxes3_0=Doswiadczony wojownik
-m.EffectsAxes3_1=Mordowanie setek potworow zwiekszylo twoja sile i celnosc. Zadajesz wiecej obrazen.
-m.AbilLockAxes1=Aby odblokowac doswiadczonego wojownika, zdobadz 500 poziom.
-m.AbilBonusAxes1_0=Doswiadczony wojownik
-m.AbilBonusAxes1_1=Zadajesz dodatkowe 4 punkty obrazen.
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Szansa na krytyczne uderzenie: [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Dlugosc berserku: [[YELLOW]]{0} sekund
 m.SkillSwords=MIECZE
