--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -101,12 +101,19 @@ m.XPGainAxes=Atacando monstros
 m.EffectsAxes1_0=Rachador de Crânios (HABILIDADE ESPECIAL)
 m.EffectsAxes1_1=Causa Danos em Area
 m.EffectsAxes2_0=Ataques Críticos
-m.EffectsAxes2_1=Dobra o Dano
-m.EffectsAxes3_0=Mestre com Machados (NIVEL 500)
-m.EffectsAxes3_1=Aumenta o Dano
-m.AbilLockAxes1=DESBLOQUEIE NO NIVEL 500 (Mestre com Machados)
-m.AbilBonusAxes1_0=Mestre com Machados/
-m.AbilBonusAxes1_1=Bônus de 4 de dano
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Chance ataque crítico: [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Duraçao do Rachador de Crânios: [[YELLOW]]{0}s
 
