--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -100,11 +100,19 @@ m.EffectsAxes1_0=Разрушитель черепов(способность)
 m.EffectsAxes1_1=Увеличение урона от топора
 m.EffectsAxes2_0=Критические удары
 m.EffectsAxes2_1=Двойной урон
-m.EffectsAxes3_0=Мастерство топора(500 уровень)
-m.EffectsAxes3_1=Улучшение урона
-m.AbilLockAxes1=Блокируется до 500+ уровня(Мастерство топора)
-m.AbilBonusAxes1_0=Мастерство топора
-m.AbilBonusAxes1_1=Дает бонус в 4 урона
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Шанс критического удара: [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Продолжительность Разрушителя Черепов: [[YELLOW]]{0}s
 m.SkillSwords=Мечи
