--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -99,11 +99,19 @@ m.EffectsAxes1_0=Fendeur de crânes (capacité spéciale)
 m.EffectsAxes1_1=provoque des dégâts de zone 
 m.EffectsAxes2_0=Coup critiques
 m.EffectsAxes2_1=double les dégâts
-m.EffectsAxes3_0=Maîtrise de la hache (niveau 500)
-m.EffectsAxes3_1=Augmente les dégâts
-m.AbilLockAxes1=Débloqué au niveau 500 (Maîtrise de la hache)
-m.AbilBonusAxes1_0=Maîtrise de la hache
-m.AbilBonusAxes1_1=4 Blessures en bonus
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Chances de coup critique : [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Durée de votre capacité spéciale : [[YELLOW]]{0}s
 m.SkillSwords=ÉPÉE
