--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -105,11 +105,19 @@ m.EffectsAxes1_0=Schedelsplijter (ABILITY)
 m.EffectsAxes1_1=Geef schade rond om je heen
 m.EffectsAxes2_0=Critical Strikes
 m.EffectsAxes2_1=Dubbele schade
-m.EffectsAxes3_0=Bijl Master (500 SKILL)
-m.EffectsAxes3_1=Verhoogt schade
-m.AbilLockAxes1=GEBLOKEERD TOT 500+ SKILL (BIJL MASTER)
-m.AbilBonusAxes1_0=Bijl Master
-m.AbilBonusAxes1_1=4 schade extra
+m.EffectsAxes3_0=Axe Mastery
+m.EffectsAxes3_1=Adds bonus DMG
+m.EffectsAxes4_0=Impact
+m.EffectsAxes4_1=Strike with enough force to shatter armor
+m.EffectsAxes5_0=Greater Impact
+m.EffectsAxes5_1=Deal bonus damage to unarmored foes
+m.AbilLockAxes1=LOCKED UNTIL 500+ SKILL (AXE MASTERY)
+m.AbilBonusAxes1_0=Axe Mastery
+m.AbilBonusAxes1_1=Bonus {0} damage
+m.AbilBonusAxes2_0=Impact
+m.AbilBonusAxes2_1=Deal {0} DMG to armor
+m.AbilBonusAxes3_0=Greater Impact
+m.AbilBonusAxes3_1=Deal {0} Bonus DMG to the unarmored
 m.AxesCritChance=[[RED]]Kans op Critical Strikes: [[YELLOW]]{0}%
 m.AxesSkullLength=[[RED]]Schedelsplijter lengte: [[YELLOW]]{0}s
 m.SkillSwords=ZWAARDEN
