--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -408,3 +408,12 @@ Skills.AdeptStone=[[DARK_RED]]You're not skilled enough to repair Stone.
 Skills.AdeptIron=[[DARK_RED]]You're not skilled enough to repair Iron.
 Skills.AdeptGold=[[DARK_RED]]You're not skilled enough to repair Gold.
 Skills.Woodcutting.TreeFellerThreshold=[[RED]]That tree is too large!
+Axes.GreaterImpactOnSelf=[[RED]]**HIT BY GREATER IMPACT**
+Axes.GreaterImpactOnEnemy=[[GREEN]]**STRUCK WITH GREAT FORCE**
+Skills.BerserkPlayerOff=[[RED]]Berserk[[GREEN]] has worn off for [[YELLOW]]{0}
+Skills.GreenTerraPlayerOff=[[RED]]Green Terra[[GREEN]] has worn off for [[YELLOW]]{0}
+Skills.TreeFellerPlayerOff=[[RED]]Tree Feller[[GREEN]] has worn off for [[YELLOW]]{0}
+Skills.SuperBreakerPlayerOff=[[RED]]Super Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
+Skills.SkullSplitterPlayerOff=[[RED]]Skull Splitter[[GREEN]] has worn off for [[YELLOW]]{0}
+Skills.GigaDrillBreakerPlayerOff=[[RED]]Giga Drill Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
+Skills.SerratedStrikesPlayerOff=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[YELLOW]]{0}
