--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ Version 1.3.00-dev
  + Added 'mcmmo.commands.inspect' permission node for the new /inspect command
  + Added Impact & Greater Impact subskills to Axes
  + Re-added mcMMO reporting damage events
+ = Fixed bug where Disarm didn't work at all ever
  = Fixed bug where Swords command showed Bleed Length twice instead of Bleed Chance
  = Fixed bug where Tree Feller wasn't checking for Tree Feller permission
  = Fixed bug where Leaf Blower required Tree Feller permissions rather than Woodcutting permissions
@@ -48,7 +49,7 @@ Version 1.3.00-dev
  ! Changed Unarmed to start with a +3 DMG (1 Heart = 2 DMG) bonus from Iron Arm Style to make leveling it more viable
  ! Changed Unarmed to gain bonus damage every 50 skill levels
  ! Changed Unarmed to gain more bonus damage total than before
- ! Changed Unarmed to disarm 1.5x more often than before
+ ! Changed Unarmed to have a max disarm chance of 33.3% rather than 25%
  ! Changed Tree Feller to take down entire trees
  ! Changed mob spawn tracking to use Unique Entity ID instead of Entity Object
  ! Changed stats command name to mcstats for better plugin compatibility
