Taming locale updates

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -40,7 +40,7 @@ m.AbilityBonusTemplate=[[YELLOW]]{0}: [[GREEN]]{1}
 m.Effects=EFFEKTE
 m.YourStats=[[DARK_AQUA]]_______ [[YELLOW]]DEINE WERTE [[DARK_AQUA]]_______
 m.SkillTaming=Bestienkunde (Taming)
-m.XPGainTaming=Shearing, Animal Taming, or combat w/ your wolves
+m.XPGainTaming=Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=[[YELLOW]]Bestienkunde
 m.EffectsTaming1_1=[[AQUA]]mit Knochen schlagen inspiziert Woelfe
 m.EffectsTaming2_0=[[YELLOW]]Biss
