--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -40,7 +40,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=EFEKTIT
 m.YourStats=TILASTOSI
 m.SkillTaming=KESYTTÄMINEN
-m.XPGainTaming=Shearing, Animal Taming, or combat w/ your wolves
+m.XPGainTaming=Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=Pedon Tarina
 m.EffectsTaming1_1=Luulla lyöminen tutkii susia
 m.EffectsTaming2_0=Pisto
