--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -40,7 +40,7 @@ m.AbilityBonusTemplate=[[RED]]{0}: [[YELLOW]]{1}
 m.Effects=EFFETS
 m.YourStats=VOS STATS
 m.SkillTaming=DRESSAGE
-m.XPGainTaming=Shearing, Animal Taming, or combat w/ your wolves
+m.XPGainTaming=Animal Taming, or combat w/ your wolves
 m.EffectsTaming1_0=Connaissance des bêtes
 m.EffectsTaming1_1=Inspecte un loup avec un os
 m.EffectsTaming2_0=Morsures
