--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,9 @@ Key:
   ! Change
   - Removal
 
+Version 2.0.00-dev
+ ! Changed Ignition to add fire ticks rather than replacing them.
+
 Version 1.3.01
  = Fixed bug where Tree Feller had no cooldown
  = Fixed bug with activating Skull Splitter after using Tree Feller
