--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ Key:
   - Removal
 
 Version 2.0.00-dev
+ + Added Ocelots to Taming XP tables.
  ! Changed Ignition to add fire ticks rather than replacing them.
 
 Version 1.3.01
