Damage from failed Tree Feller is now random (but never kills)

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 2.0.00-dev
  + Added Ocelots to Taming XP tables.
  ! Changed Tree Feller to hand out 1/4 of normal XP for each JUNGLE LOG block it fells
  ! Changed Tree Feller to only fell trees if you have enough durability
+ ! Changed Tree Feller to cause injury if your axe splinters from a failed Tree Feller attempt
  ! Changed invincibility checks in EntityDamage listeners to accommodate for vanilla MC behaviour
  ! Changed Ignition to add fire ticks rather than replacing them.
 
