--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,7 +7,7 @@ Key:
   ! Change
   - Removal
 
-Version 1.3.02-dev
+Version 1.3.02
  + Added Ocelots to Taming XP tables.
  ! Changed Tree Feller to hand out 1/4 of normal XP for each JUNGLE LOG block it fells
  ! Changed Tree Feller to only fell trees if you have enough durability
