Fixed Greater Impact not dealing damage, nerf'd Axes critical chance.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,9 @@ Version 1.3.02
  ! Changed Tree Feller to cause injury if your axe splinters from a failed Tree Feller attempt
  ! Changed invincibility checks in EntityDamage listeners to accommodate for vanilla MC behaviour
  ! Changed Ignition to add fire ticks rather than replacing them.
+ ! Changed Axes critical to have a max critical rate of 37.5% down from 75%
+ = Fixed bug with Axes command displaying wrong Greater Impact bonus damage
+ = Fixed bug where Impact didn't apply bonus damage
  = Fixed Impact proccing multiple times in a row
  = Fixed bug where PVE skills didn't level
 
