--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,12 +8,14 @@ Key:
   - Removal
 
 Version 1.3.02
+ + Added in game guides for each skill, simply type /skillname ? to access them
  ! Changed Tree Feller to hand out 1/4 of normal XP for each JUNGLE LOG block it fells
  ! Changed Tree Feller to only fell trees if you have enough durability
  ! Changed Tree Feller to cause injury if your axe splinters from a failed Tree Feller attempt
  ! Changed invincibility checks in EntityDamage listeners to accommodate for vanilla MC behaviour
  ! Changed Ignition to add fire ticks rather than replacing them.
  ! Changed Axes critical to have a max critical rate of 37.5% down from 75%
+ = Fixed bug where Taming defensive checks got called twice
  = Fixed Shake not working correctly
  = Fixed bug with Axes command displaying wrong Greater Impact bonus damage
  = Fixed bug where Impact didn't apply bonus damage
