LOCALE ALL THE THINGS!

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -419,3 +419,13 @@ Skills.SerratedStrikesPlayerOff=[[RED]]Serrated Strikes[[GREEN]] has worn off fo
 Skills.BlastMiningPlayer=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Skills.YourBlastMining=[[GREEN]]Your [[YELLOW]]Blast Mining [[GREEN]]ability is refreshed!
 TreeFeller.AxeSplinters=[[RED]]YOUR AXE SPLINTERS INTO DOZENS OF PIECES
+Acrobatics.GracefulRoll=[[GREEN]]**GRACEFUL ROLL**
+Acrobatics.Dodge=[[GREEN]]**DODGE**
+Acrobatics.Roll=**ROLL**
+Axes.HitCritically=[[DARK_RED]]You were CRITICALLY hit!
+Axes.CriticalHit=[[RED]]CRITIAL HIT!
+Axes.HitByCleave=[[DARK_RED]]Struck by CLEAVE!
+Swords.EnemyBleeding=[[GREEN]]**ENEMY BLEEDING**
+Swords.HitBySerratedStrikes=[[DARK_RED]]Struck by SERRATED STRIKES!
+Swords.CounterAttacked=[[GREEN]]**COUNTER-ATTACKED**
+Swords.HitByCounterAttack=[[DARK_RED]]Hit with a counter-attack!
