--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,7 @@ Key:
   - Removal
 
 Version 1.3.02
- + Added in game guides for each skill, simply type /skillname ? to access them
+ + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
  ! Changed Tree Feller to hand out 1/4 of normal XP for each JUNGLE LOG block it fells
  ! Changed Tree Feller to only fell trees if you have enough durability
  ! Changed Tree Feller to cause injury if your axe splinters from a failed Tree Feller attempt
