--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,9 @@ Key:
   = Fix
   ! Change
   - Removal
+  
+Version 2.0.00-dev
+ + Added Ocelots to Taming XP tables
 
 Version 1.3.02
  + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
