--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
   
 Version 2.0.00-dev
  + Added Ocelots to Taming XP tables
+ + Added ability to summon Ocelots with Call of the Wild
 
 Version 1.3.02
  + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
