--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,8 @@ Version 2.0.00-dev
  + Added ability to summon Ocelots with Call of the Wild
  = Fixed ClassCastException from Taming preventDamage checks
  = Fixed issue with Blast Mining not seeing TNT for detonation due to snow
+ ! Changed Call of the Wild to activate on left-click rather than right-click
+ ! Changed Blast Mining to track based on Entity ID vs. Location
 
 Version 1.3.02
  + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
