--- a/Changelog.txt
+++ b/Changelog.txt
@@ -16,6 +16,7 @@ Version 2.0.00-dev
  = Fixed issue with Blast Mining not seeing TNT for detonation due to snow
  ! Changed Call of the Wild to activate on left-click rather than right-click
  ! Changed Blast Mining to track based on Entity ID vs. Location
+ = Fix Taming to hopefully properly handle offline players....again
 
 Version 1.3.02
  + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
