--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 2.0.00-dev
  = Fixed issue where every block broken had a mining check applied
  = Fixed issue where every block broken had a herbalism check applied
  = Fixed issue where blocks weren't being removed from the watchlist
+ ! Changed inspect failed message to say inspect rather than whois
  ! Changed Call of the Wild to activate on left-click rather than right-click
  ! Changed Blast Mining to track based on Entity ID vs. Location
  ! Changed mmoedit to save a profile when used (this will make mctop update)
