Assorted bug fixes & cleanup.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,8 @@ Version 2.0.00-dev
  = Fixed issue where every block broken had a herbalism check applied
  = Fixed issue where blocks weren't being removed from the watchlist
  = Fixed exploit where you could use /ptp to teleport to anyone
+ = Fixed bug where Green Terra didn't work on Stone Brick
+ = Fixed bug where Tree Feller could be used without permissions
  ! Changed inspect failed message to say inspect rather than whois
  ! Changed Call of the Wild to activate on left-click rather than right-click
  ! Changed Blast Mining to track based on Entity ID vs. Location
