Lets add some CONFIG to that cooldown

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,7 +24,7 @@ Version 2.0.00-dev
  = Fixed bug where Green Terra didn't work on Stone Brick
  = Fixed bug where Tree Feller could be used without permissions
  = Fixed exploit where falling sand & gravel weren't tracked
- ! Changed PTP to prevent teleporting if you've been hurt in the last 30 seconds
+ ! Changed PTP to prevent teleporting if you've been hurt in the last 30 seconds (configurable)
  ! Changed Chimera Wing failure check to use the maxWorldHeight.
  ! Changed inspect failed message to say inspect rather than whois
  ! Changed Call of the Wild to activate on left-click rather than right-click
