*CLEANUP* - mcPlayerListener.java
Also moved some stuff around to more appropriate files, created classes
for a few Runnables, and mcLocale'd a couple of strings.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -441,3 +441,6 @@ Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
 Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
+GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
+XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
+BlastMining.Boom = [[GRAY]]**BOOM**
