--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,6 +30,7 @@ Version 2.0.00-dev
  ! Changed Call of the Wild to activate on left-click rather than right-click
  ! Changed Blast Mining to track based on Entity ID vs. Location
  ! Changed mmoedit to save a profile when used (this will make mctop update)
+ ! Changed a few Runnable tasks to have their own classes
 
 Version 1.3.02
  + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
