--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -441,3 +441,6 @@ Guides.Swords=Guide coming soon...
 Guides.Taming=Guide coming soon...
 Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
+GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
+XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
+BlastMining.Boom = [[GRAY]]**BOOM**
