Made it so you leave your party if you enter a world where you don't have party permissions. Also removed some unused stuff from PlayerProfile.

--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -426,3 +426,4 @@ Guides.Woodcutting=Guide coming soon...
 GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 XPRate.Event = [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 BlastMining.Boom = [[GRAY]]**BOOM**
+Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
