--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,6 +32,7 @@ Version 2.0.00-dev
  ! Changed Blast Mining to track based on Entity ID vs. Location
  ! Changed mmoedit to save a profile when used (this will make mctop update)
  ! Changed a few Runnable tasks to have their own classes
+ ! Changed parties so that a player will leave their existing party if they enter a world where they don't have party permissions.
 
 Version 1.3.02
  + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
