--- a/Changelog.txt
+++ b/Changelog.txt
@@ -38,6 +38,7 @@ Version 2.0.00-dev
  ! Changed Call of the Wild to summon animals already tamed.
  ! Changed mob spawner tracking to use new Metadata API
  ! Changed block watch list to use new Metadata API
+ ! Changed around a few config options, including the ones for mySQL. *YOU NEED TO REDO YOUR CONFIG FILE*
 
 Version 1.3.02
  + Added in game guides for Mining, Excavation, and Acrobatics. Simply type /skillname ? to access them
